SERVER-51841 Correct usage of fassertFailedNoTrace in OplogCapMaintainerThread